lien entre header et pages html

--- a/Greendow/Gestionnaire.html
+++ b/Greendow/Gestionnaire.html
@@ -198,12 +198,13 @@
 	<body>
 		<div class="top-nav">
 			<div class="container clearf">
-				<div class="fl"><a href="index.html"><img src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png"
-							style="height: 80px;"></a>
+				<div class="fl"><a href="tryindex.html"><img
+					src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png"
+					style="height: 80px;"></a>
 				</div>
 				<div class="fl">
-					<a href="#" style="margin-left: 60px;">Pourquoi Greendow</a>
-					<a href="#">| FAQ |</a>
+					<a href="tryindex.html#pourquoi" style="margin-left: 60px;">Pourquoi Greendow</a>
+					<a href="Foire aux questions.html">| FAQ |</a>
 					<a href="#">Acheter</a>
 				</div>
 				<div class="fr">
