--- a/Greendow/tryindex.html
+++ b/Greendow/tryindex.html
@@ -589,7 +589,7 @@
 			<a href="" style="margin-left: calc(100% / 12);background-color: white;"><img
 					src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png" style="height: 100px;"></a>
 			<a href="#pourquoi" class="top1" style="line-height: 40px;transform: translateY(15%)">Pourquoi Greendow</a>
-			<a href="">FAQ</a>
+			<a href="Foire aux questions.html">FAQ</a>
 			<a href="">Acheter</a>
 			<a href="Connexion.html" class="top2">Connexion</a>
 			<a href="">Support</a>
