modification des htmls

--- a/Greendow/tryindex.html
+++ b/Greendow/tryindex.html
@@ -211,6 +211,7 @@
 					border: none !important;
 					background-color: #5eaf4d !important;
 					color: white !important;
+					width: 20% !important;
 					-webkit-transition: all 0.6s ease;
 				}
 
