--- a/Greendow/Control.html
+++ b/Greendow/Control.html
@@ -14,7 +14,7 @@
 				background-image: linear-gradient(#006838,#5bb948);
 				background-size: cover;
 				background-attachment: fixed;
-				background-size: 400%;
+				background-size: 100%;
 			}
 
 			.container {
@@ -74,13 +74,15 @@
 
 			.Control {
 				position: absolute;
+				display: flex;
+				flex-wrap: wrap;
 				top: 50%;
 				margin-top: -200px;
 				left: 50%;
 				margin-left: -600px;
 				background-color: rgba(0, 0, 0, 0.2);
 				width: 1200px;
-				height: 1000px;
+				height: 10px;
 				border-radius: 25px;
 				/* text-align: center; */
 			}
@@ -88,6 +90,8 @@
 			.information {
 				height: 130px;
 				width: 100%;
+				display: flex;
+				flex-wrap: wrap;
 				/* background-color: red; */
 			}
 
@@ -111,59 +115,57 @@
 			}
 
 			.capteur {
-				height: 870px;
+				display: flex;
+				flex-wrap: wrap;
+				height: 84.5%;
+				width: 98.35%;
 				font-family: Century Gothic;
 				/* background-color: blue; */
-				display: grid;
+				/* display: grid;
 				grid-template-rows: 1fr 1fr;
-				grid-template-columns: 1fr 1fr 1fr;
+				grid-template-columns: 1fr 1fr;
 				grid-template-areas:
-					"temperature humidite co2"
-					"pouls particules sonexterieur"
+					"temperature humidite"
+					"co2 pouls" */
 
 			}
 
 			.temperature {
 				border-radius: 30px;
-				margin: 40px 50px;
+				margin: 15% 6%;
+				min-width: 270px;
 				grid-area: temperature;
 				background-color: #5BB948;
+				width: 35%;
 			}
 
 			.humidite {
 				border-radius: 30px;
-				margin: 40px 50px;
+				min-width: 270px;
+				margin: 15% 6%;
 				grid-area: humidite;
 				background-color: #5BB948;
+				width: 35%;
 			}
 
 			.co2 {
 				border-radius: 30px;
-				margin: 40px 50px;
+				min-width: 270px;
+				margin: 0% 6%;
 				grid-area: co2;
 				background-color: #5BB948;
+				width: 35%;
 			}
 
 			.pouls {
 				border-radius: 30px;
-				margin: 40px 50px;
+				min-width: 270px;
+				margin: 0% 6%;
 				grid-area: pouls;
 				background-color: #5BB948;
+				width: 35%;	
 			}
 
-			.particules {
-				border-radius: 30px;
-				margin: 40px 50px;
-				grid-area: particules;
-				background-color: #5BB948;
-			}
-
-			.sonexterieur {
-				border-radius: 30px;
-				margin: 40px 50px;
-				grid-area: sonexterieur;
-				background-color: #5BB948;
-			}
 
 			.footer {
 				display: flex;
@@ -217,13 +219,13 @@
 	<body onload="startTime()">
 		<div class="top-nav">
 			<div class="container clearf">
-				<div class="fl"><a href="index.html"><img
-							src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png"
-							style="height: 80px;"></a>
+				<div class="fl"><a href="tryindex.html"><img
+					src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png"
+					style="height: 80px;"></a>
 				</div>
 				<div class="fl">
-					<a href="#" style="margin-left: 60px;">Pourquoi Greendow</a>
-					<a href="#">| FAQ |</a>
+					<a href="tryindex.html#pourquoi" style="margin-left: 60px;">Pourquoi Greendow</a>
+					<a href="Foire aux questions.html">| FAQ |</a>
 					<a href="#">Acheter</a>
 				</div>
 				<div class="fr">
@@ -236,10 +238,10 @@
 
 
 
-		<div class="Control">
+		
 			<div class="information">
 				<form action="" method="get">
-					<p style="text-align: center;font-size: 30px;font-family:Century Gothic;color: white;margin-top: 10px;"><span
+					<p style="margin-left: 47%;font-size: 30px;font-family:Century Gothic;color: white;margin-top: 10px;"><span
 							id="nowDateTimeSpan"></span></p>
 					<div class="I1">État de la fenêtre : </div>
 					<div class="I1" style="color: greenyellow;">Ouverte</div>
@@ -253,45 +255,33 @@
 					</div>
 				</form>
 			</div>
-			<div class="capteur">
+			<div class="capteur control">
 				<div class="temperature" id="c1">
 					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">Température​</p>
 					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/temperature.png" style="height: 150px;margin: 20px 0 20px 72px;">
-					<p style="color: white;font-size: 30px;text-align: center;">20 ℃</p>
+					<img src="img/temperature.png" style="height: 150px;margin: 20px 0 20px 35%;">
+					<p style="color: white;font-size: 30px;text-align: center;">20 °C</p>
 				</div>
 				<div class="humidite" id="c1">
 					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">Humidité</p>
 					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/humidite.png" style="height: 150px;margin: 20px 0 20px 72px;">
+					<img src="img/humidite.png" style="height: 150px;margin: 20px 0 20px 35%;">
 					<p style="color: white;font-size: 30px;text-align: center;">45 %</p>
 				</div>
 				<div class="co2" id="c1">
 					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">CO<sup>2</sup>​</p>
 					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/CO2.png" style="height: 150px;margin: 20px 0 20px 72px;">
+					<img src="img/CO2.png" style="height: 150px;margin: 20px 0 20px 35%;">
 					<p style="color: white;font-size: 30px;text-align: center;">715 ppm</p>
 				</div>
 				<div class="pouls" id="c1">
 					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">Pouls</p>
-					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/pouls.png" style="height: 150px;margin: 20px 0 20px 72px;">
+					<div style="height: 3px;background-color: white;"></div>
+					<img src="img/pouls.png" style="height: 150px;margin: 20px 0 20px 35%;">
 					<p style="color: white;font-size: 30px;text-align: center;">69 bpm</p>
 				</div>
-				<div class="particules" id="c1">
-					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">Particules</p>
-					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/particules.png" style="height: 150px;margin: 20px 0 20px 72px;">
-					<p style="color: white;font-size: 30px;text-align: center;">0.3 ppm</p>
-				</div>
-				<div class="sonexterieur" id="c1">
-					<p style="color: white;font-size: 35px;text-align: center;margin-top: 10px;">Son extérieur</p>
-					<div style="height: 3px;background-color: white;margin: 15px 0;"></div>
-					<img src="img/son%20exterieur.png" style="height: 150px;margin: 20px 0 20px 72px;">
-					<p style="color: white;font-size: 30px;text-align: center;">54 dB</p>
-				</div>
 			</div>
-		</div>
+		
 
 
 
